Add base/gallery package