@@ -197,6 +197,8 @@
                     <argLine>
                         --add-opens
                             com.swardana.nayanika/com.swardana.nayanika.base=ALL-UNNAMED
+                        --add-opens
+                            com.swardana.nayanika/com.swardana.nayanika.base.gallery=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
